ime: show Middle-aged Hangul mode icons

--- a/src/saenaru.rc
+++ b/src/saenaru.rc
@@ -39,6 +39,8 @@ INDIC_PEN	ICON    DISCARDABLE		"..\\resource\\penindic.ico"
 INDIC_HAN	ICON    DISCARDABLE		"..\\resource\\text\\hankey.ico"
 INDIC_HAN2	ICON    DISCARDABLE		"..\\resource\\text\\han2key.ico"
 INDIC_ENG	ICON	DISCARDABLE		"..\\resource\\text\\engkey.ico"
+INDIC_HANO	ICON    DISCARDABLE		"..\\resource\\text\\ohankey.ico"
+INDIC_HAN2O	ICON    DISCARDABLE		"..\\resource\\text\\ohan2key.ico"
 INDIC_HANJA	ICON	DISCARDABLE		"..\\resource\\text\\hanjakey.ico"
 INDIC_KEY	ICON    DISCARDABLE		"..\\resource\\keyboard.ico"
 INDIC_HALF	ICON    DISCARDABLE		"..\\resource\\half.ico"
