--- a/kbddvk/kbddvk.rc
+++ b/kbddvk/kbddvk.rc
@@ -1,10 +1,10 @@
 #include "winver.h"
-1 VERSIONINFO
+VS_VERSION_INFO VERSIONINFO
  FILEVERSION       1,0,0,2006
  PRODUCTVERSION    1,0,0,2006
  FILEFLAGSMASK 0x3fL
  FILEFLAGS 0x0L
-FILEOS 0x40004L
+ FILEOS 0x40004L
  FILETYPE VFT_DLL
  FILESUBTYPE VFT2_DRV_KEYBOARD
 BEGIN
