add *.sln, update *.vcxproj
 * set the RandomizedBaseAddress true
 * add /GS-

--- a/colemak/colemak.vcxproj
+++ b/colemak/colemak.vcxproj
@@ -164,6 +164,7 @@
       <WppRecorderEnabled>true</WppRecorderEnabled>
       <WppScanConfigurationData Condition="'%(ClCompile.ScanConfigurationData)' == ''">kbdcmk.h</WppScanConfigurationData>
       <WppKernelMode>true</WppKernelMode>
+      <BufferSecurityCheck>false</BufferSecurityCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;DEBUG=1;DEBUG_LV=103;UNICODE;_UNICODE;_WINDOWS;WINVER=0x500;NO_NTDLL=1;USE_MSVCRT=1;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <DisableSpecificWarnings>4311;%(DisableSpecificWarnings)</DisableSpecificWarnings>
       <AdditionalOptions>/utf-8</AdditionalOptions>
@@ -175,7 +176,7 @@
       <AdditionalOptions>%(AdditionalOptions) /ignore:4253,4254</AdditionalOptions>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <RandomizedBaseAddress>false</RandomizedBaseAddress>
+      <RandomizedBaseAddress>true</RandomizedBaseAddress>
       <ModuleDefinitionFile>kbdcmk.def</ModuleDefinitionFile>
     </Link>
   </ItemDefinitionGroup>
@@ -185,6 +186,7 @@
       <WppRecorderEnabled>true</WppRecorderEnabled>
       <WppScanConfigurationData Condition="'%(ClCompile.ScanConfigurationData)' == ''">kbdcmk.h</WppScanConfigurationData>
       <WppKernelMode>true</WppKernelMode>
+      <BufferSecurityCheck>false</BufferSecurityCheck>
       <PreprocessorDefinitions>WIN32;UNICODE;_UNICODE;_WINDOWS;WINVER=0x500;NO_NTDLL=1;USE_MSVCRT=1;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalOptions>/utf-8</AdditionalOptions>
       <BasicRuntimeChecks>Default</BasicRuntimeChecks>
@@ -195,8 +197,7 @@
       <AdditionalOptions>%(AdditionalOptions) /ignore:4253,4254</AdditionalOptions>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <RandomizedBaseAddress>false</RandomizedBaseAddress>
-      <EntryPointSymbol>DLLEntry</EntryPointSymbol>
+      <RandomizedBaseAddress>true</RandomizedBaseAddress>
       <ModuleDefinitionFile>kbdcmk.def</ModuleDefinitionFile>
       <OutputFile>$(OutDir)\kbdcmk.dll</OutputFile>
     </Link>
@@ -207,6 +208,7 @@
       <WppRecorderEnabled>true</WppRecorderEnabled>
       <WppScanConfigurationData Condition="'%(ClCompile.ScanConfigurationData)' == ''">kbdcmk.h</WppScanConfigurationData>
       <WppKernelMode>true</WppKernelMode>
+      <BufferSecurityCheck>false</BufferSecurityCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;DEBUG=1;DEBUG_LV=103;UNICODE;_UNICODE;_WINDOWS;WINVER=0x500;NO_NTDLL=1;USE_MSVCRT=1;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <DisableSpecificWarnings>4311;%(DisableSpecificWarnings)</DisableSpecificWarnings>
       <AdditionalOptions>/utf-8</AdditionalOptions>
@@ -219,7 +221,7 @@
       <OptimizeReferences>true</OptimizeReferences>
       <IgnoreAllDefaultLibraries>true</IgnoreAllDefaultLibraries>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <RandomizedBaseAddress>false</RandomizedBaseAddress>
+      <RandomizedBaseAddress>true</RandomizedBaseAddress>
       <ModuleDefinitionFile>kbdcmk.def</ModuleDefinitionFile>
       <OutputFile>$(OutDir)kbdcmk.dll</OutputFile>
     </Link>
@@ -230,6 +232,7 @@
       <WppRecorderEnabled>true</WppRecorderEnabled>
       <WppScanConfigurationData Condition="'%(ClCompile.ScanConfigurationData)' == ''">kbdcmk.h</WppScanConfigurationData>
       <WppKernelMode>true</WppKernelMode>
+      <BufferSecurityCheck>false</BufferSecurityCheck>
       <PreprocessorDefinitions>WIN32;UNICODE;_UNICODE;_WINDOWS;WINVER=0x500;NO_NTDLL=1;USE_MSVCRT=1;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalOptions>/utf-8</AdditionalOptions>
       <BasicRuntimeChecks>Default</BasicRuntimeChecks>
@@ -240,7 +243,7 @@
       <AdditionalOptions>%(AdditionalOptions) /ignore:4253,4254</AdditionalOptions>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>false</GenerateDebugInformation>
-      <RandomizedBaseAddress>false</RandomizedBaseAddress>
+      <RandomizedBaseAddress>true</RandomizedBaseAddress>
       <ModuleDefinitionFile>kbdcmk.def</ModuleDefinitionFile>
       <OutputFile>$(OutDir)kbdcmk.dll</OutputFile>
     </Link>
@@ -251,6 +254,7 @@
       <WppRecorderEnabled>true</WppRecorderEnabled>
       <WppScanConfigurationData Condition="'%(ClCompile.ScanConfigurationData)' == ''">kbdcmk.h</WppScanConfigurationData>
       <WppKernelMode>true</WppKernelMode>
+      <BufferSecurityCheck>false</BufferSecurityCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;DEBUG=1;DEBUG_LV=103;UNICODE;_UNICODE;_WINDOWS;WINVER=0x500;NO_NTDLL=1;USE_MSVCRT=1;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <DisableSpecificWarnings>4311;%(DisableSpecificWarnings)</DisableSpecificWarnings>
       <AdditionalOptions>/utf-8</AdditionalOptions>
@@ -262,7 +266,7 @@
       <AdditionalOptions>%(AdditionalOptions) /ignore:4253,4254</AdditionalOptions>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <RandomizedBaseAddress>false</RandomizedBaseAddress>
+      <RandomizedBaseAddress>true</RandomizedBaseAddress>
       <ModuleDefinitionFile>kbdcmk.def</ModuleDefinitionFile>
       <OutputFile>$(OutDir)kbdcmk.dll</OutputFile>
     </Link>
@@ -273,6 +277,7 @@
       <WppRecorderEnabled>true</WppRecorderEnabled>
       <WppScanConfigurationData Condition="'%(ClCompile.ScanConfigurationData)' == ''">kbdcmk.h</WppScanConfigurationData>
       <WppKernelMode>true</WppKernelMode>
+      <BufferSecurityCheck>false</BufferSecurityCheck>
       <PreprocessorDefinitions>WIN32;UNICODE;_UNICODE;_WINDOWS;WINVER=0x500;NO_NTDLL=1;USE_MSVCRT=1;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <DisableSpecificWarnings>4311;%(DisableSpecificWarnings)</DisableSpecificWarnings>
       <AdditionalOptions>/utf-8</AdditionalOptions>
@@ -284,7 +289,7 @@
       <AdditionalOptions>%(AdditionalOptions) /ignore:4253,4254</AdditionalOptions>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <RandomizedBaseAddress>false</RandomizedBaseAddress>
+      <RandomizedBaseAddress>true</RandomizedBaseAddress>
       <ModuleDefinitionFile>kbdcmk.def</ModuleDefinitionFile>
       <OutputFile>$(OutDir)kbdcmk.dll</OutputFile>
     </Link>
@@ -295,6 +300,7 @@
       <WppRecorderEnabled>true</WppRecorderEnabled>
       <WppScanConfigurationData Condition="'%(ClCompile.ScanConfigurationData)' == ''">kbdcmk.h</WppScanConfigurationData>
       <WppKernelMode>true</WppKernelMode>
+      <BufferSecurityCheck>false</BufferSecurityCheck>
       <PreprocessorDefinitions>WIN32;UNICODE;_UNICODE;_WINDOWS;WINVER=0x500;NO_NTDLL=1;USE_MSVCRT=1;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <AdditionalOptions>/utf-8</AdditionalOptions>
       <BasicRuntimeChecks>Default</BasicRuntimeChecks>
@@ -305,7 +311,7 @@
       <AdditionalOptions>%(AdditionalOptions) /ignore:4253,4254</AdditionalOptions>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <RandomizedBaseAddress>false</RandomizedBaseAddress>
+      <RandomizedBaseAddress>true</RandomizedBaseAddress>
       <ModuleDefinitionFile>kbdcmk.def</ModuleDefinitionFile>
       <OutputFile>$(OutDir)kbdcmk.dll</OutputFile>
     </Link>
@@ -316,6 +322,7 @@
       <WppRecorderEnabled>true</WppRecorderEnabled>
       <WppScanConfigurationData Condition="'%(ClCompile.ScanConfigurationData)' == ''">kbdcmk.h</WppScanConfigurationData>
       <WppKernelMode>true</WppKernelMode>
+      <BufferSecurityCheck>false</BufferSecurityCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;DEBUG=1;DEBUG_LV=103;UNICODE;_UNICODE;_WINDOWS;WINVER=0x500;NO_NTDLL=1;USE_MSVCRT=1;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <DisableSpecificWarnings>4311;%(DisableSpecificWarnings)</DisableSpecificWarnings>
       <AdditionalOptions>/utf-8</AdditionalOptions>
@@ -327,7 +334,7 @@
       <AdditionalOptions>%(AdditionalOptions) /ignore:4253,4254</AdditionalOptions>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <RandomizedBaseAddress>false</RandomizedBaseAddress>
+      <RandomizedBaseAddress>true</RandomizedBaseAddress>
       <ModuleDefinitionFile>kbdcmk.def</ModuleDefinitionFile>
       <OutputFile>$(OutDir)kbdcmk.dll</OutputFile>
     </Link>
